# asistente

./: .env  .env.example  .replit  .replit.backup  CALENDAR_IMPROVEMENT_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_SUCCESS.md  GEMINI_MODELS.md  LICENSE  README.md  REPLIT_DEPLOYMENT.md  REPLIT_NIX_TROUBLESHOOTING.md  database.py  db.sqlite3  install_deps.py  install_missing.sh  install_replit.py  locustfile.py  main.py  pyproject.toml  pytest.ini  recreate_db.py  replit.nix  requirements-replit.txt  requirements.txt  run_simple.py  run_tests.py  start.py  test_gemini_flash.py  test_replit.py
.github/workflows/: ci.yml
.kiro/specs/personal-assistant-bot/: design.md  requirements.md  tasks.md
api/: routes.py
config/: settings.py
core/: circuit_breaker.py  exceptions.py  metrics.py  middleware.py  rate_limiter.py
models/: __init__.py  base.py  gmail_channel.py  task.py
proxy/: deploy.sh  main.py  requirements.txt
services/: backup_service.py  calendar_service.py  gemini_service.py  gmail_watcher_service.py  summary_service.py  task_service.py  telegram_service.py
tests/integration/: test_api_endpoints.py
tests/unit/core/: test_circuit_breaker.py
tests/unit/services/: test_calendar_gemini_service.py  test_gemini_service.py  test_task_service.py  test_telegram_calendar_command.py  test_telegram_service.py
